# rubete

./: .env.example  Cargo.toml  README.md  lefthook.yml
src/: main.rs  server.rs
src/entity/: mod.rs  user_details.rs  user_sessions.rs  users.rs
src/handlers/: echo.rs  health_check.rs  home.rs  manual_hello.rs  mod.rs  user.rs
src/modules/: database.rs  handlers.rs  mod.rs  server.rs
src/modules/database/: connection.rs
src/modules/database/entity/: mod.rs
src/modules/handlers/: health_check.rs  home.rs
src/modules/handlers/module/users/: create.rs  login.rs  user.rs
src/modules/routes/: server.rs
src/modules/utils/: json.rs  security.rs
src/utils/: json.rs  mod.rs  response.rs
