[package]
name = "rubete"
version = "0.1.0"
edition = "2024"

[dependencies]
ntex = { version = "2.0", features = ["tokio"] }
serde_json = "1.0"
dotenvy = "0.15"
envy = "0.4"
serde = { version = "1.0", features = ["derive"] }
sea-orm = { version = "0.12", features = ["sqlx-mysql", "runtime-tokio-native-tls"] }
sea-orm-macros = "0.12"
validator = { version = "0.16", features = ["derive"] }
bcrypt = "0.15"
jsonwebtoken = "8"
chrono = { version = "0.4.42", features = ["serde"] }
