[package]
name = "rubete"
version = "0.1.0"
edition = "2024"

[dependencies]
ntex = { version = "2.0", features = ["tokio"] }
serde_json = "1.0"
dotenvy = "0.15"
envy = "0.4"
serde = { version = "1.0", features = ["derive"] }
sea-orm = { version = "1.0", features = ["sqlx-mysql", "runtime-tokio-native-tls"] }
sea-orm-macros = "1.0"
validator = { version = "0.20", features = ["derive"] }
bcrypt = "0.17"
jsonwebtoken = "9"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4"] }
ntex-session = "2.0"
